# Makarovic_project

./: CMakeLists.txt  install_sdl2.bat
scripts/: compile.ps1
src/: Character.cpp  Character.h  Game.h  Game_functions.cpp  PerlinNoise.hpp  main.cpp
